fix placeholder overflow

--- a/packages/lexical-playground/src/ui/Placeholder.css
+++ b/packages/lexical-playground/src/ui/Placeholder.css
@@ -15,6 +15,7 @@
   text-overflow: ellipsis;
   top: 10px;
   left: 10px;
+  right: 10px;
   user-select: none;
   white-space: nowrap;
   display: inline-block;
